Big bang Make it compatible with FB app

--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- shortcut::html/favicon.ico -->
-    <title>FastyBird:SmartThing!</title>
+    <title>FastyBird:SmartDevice!</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <meta name="description" content="Smart thing welcome page.">
+    <meta name="description" content="Smart device welcome page.">
     <meta name="theme-color" content="#ffffff">
     <!-- build:css style.css -->
     <link rel="stylesheet" href="static/styles.css">
@@ -24,19 +24,19 @@
             </svg>
         </a>
 
-        <h1 class="content-heading">FastyBird:SmartThing!</h1>
+        <h1 class="content-heading">FastyBird:SmartDevice!</h1>
 
-        <h2 class="content-subheading">Looks like you have arrived to smart thing welcome page!</h2>
+        <h2 class="content-subheading">Looks like you have arrived to smart device welcome page!</h2>
 
         <p>
-            If you are administrator, you could manage your thing through our thing UI app.
+            If you are administrator, you could manage your device through our device UI app.
         </p>
         <p>
-            If you have questions about how to manage things etc., please our technical <a href="mailto:support@fastybird.com">support</a> or checkout our <a href="https://wiki.fastybird.com">wiki page</a>.
+            If you have questions about how to manage devices etc., please our technical <a href="mailto:support@fastybird.com">support</a> or checkout our <a href="https://wiki.fastybird.com">wiki page</a>.
         </p>
 
         <p class="m-y-lg">
-            <a class="btn btn-primary btn-pill btn-thick" href="https://thing.fastybird.com">Open thing web manager app</a>
+            <a class="btn btn-primary btn-pill btn-thick" href="https://device.fastybird.com">Open device web manager app</a>
         </p>
 
         <div class="divider">
@@ -111,7 +111,7 @@
             </li>
         </ul>
         <p class="m-t-lg">
-            <small>© 2018 FastyBird s.r.o.</small>
+            <small>© 2018 FastyBird Ltd.</small>
         </p>
     </div>
 </div>
